# fundamental-analysis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  main.py  peers.md  pyproject.toml  req_v0.md
backend/: .env.example  .gitignore  VALUATION_README.md  app.py  backend_README.md  config.py  database.py  migrate_add_valuation_data.py  models.py  test_api.py
backend/api/: financial_api.py  peers_routes.py  routes.py  stock_price_api.py
backend/services/: data_service.py  price_service.py  valuation_service.py
backend/tests/: 1.http
config/: peers.md  watchlist.md
frontend/: package.json
frontend/public/: index.html  peers.md
frontend/src/: App.css  App.js  index.css
frontend/src/components/: DataTable.css  DataTable.js  ErrorMessage.js  LoadingSpinner.js  TickerSearch.css  TickerSearch.js  ValuationAnalysis.css  ValuationAnalysis.js  ValuationCharts.css  ValuationCharts.js
frontend/src/services/: api.js
prompts/: Fundamental_Analysis_Tool_Requirements.md  my_raw_req.md
